added hubspot crm optimisation creatives in yaml

--- a/_data/pageconfig/solutions.yaml
+++ b/_data/pageconfig/solutions.yaml
@@ -1,4 +1,100 @@
 pages:
+  hubspot-crm-optimisation.md:
+    title: HubSpot CRM Optimisation
+    tagline: "Empower Your Growth: Unlock HubSpot's Full Potential & Drive Results!"
+    outcome_image: /assets/img/icons/lineal/target.svg
+    obstacle_image: /assets/img/icons/lineal/puzzle.svg
+
+    desired_outcomes:
+      - category: Data Management Efficiency
+        description: Streamline your sales and marketing efforts with accurate contact data for seamless campaign execution and improved user experience.
+
+      - category: Customised Deal Flows
+        description: Tailor deal stages and sales processes to your unique business needs for a more efficient and effective conversion strategy.
+
+      - category: Enhanced Communication
+        description: Utilise HubSpot's tools to log, track, and manage conversations, ensuring clear communication and task delegation among team members.
+
+      - category: Intelligent Lead Capturing
+        description: Maximise lead capture and engagement using personalised messaging, forms, and chatbot conversations to drive prospects further down the sales funnel.
+
+      - category: Workflow Automation
+        description: Save time and resources by automating sales and marketing workflows, enabling your business to work smarter, not harder.
+
+      - category: Integrated Solutions
+        description: Harness the power of HubSpot's integrations to streamline your workflow, optimise SEO, and make data-driven decisions for business growth.
+
+    common_obstacles:
+      - category: Inefficient Data Management
+        description: Disorganised and outdated contact data can hinder sales and marketing efforts, leading to missed opportunities and poor user experience.
+
+      - category: Generic Sales Processes
+        description: Relying on one-size-fits-all sales processes can result in wasted resources and a lack of understanding of your unique business requirements.
+
+      - category: Ineffective Communication
+        description: Poor communication between team members can lead to mismanagement of tasks, resulting in missed deadlines and lost opportunities.
+
+      - category: Limited Lead Engagement
+        description: Inadequate lead capture and engagement strategies can stall prospects in the sales funnel, reducing conversion rates and overall success.
+
+      - category: Manual Workflow Management
+        description: Time-consuming manual workflows can hinder productivity, making it difficult for businesses to adapt and grow efficiently.
+
+      - category: Disconnected Tools and Platforms
+        description: Using multiple, disconnected tools and platforms can create confusion and inefficiencies, ultimately obstructing business growth and optimization.
+
+    outcomes_vs_painpoints:
+      - category: Data Management Efficiency
+        priority: 1
+        painpoints:
+          - Inconsistent contact information causing miscommunication
+          - Difficulty segmenting contacts for targeted campaigns
+          - Inability to track customer interactions effectively
+
+      - category: Customised Deal Flows
+        priority: 2
+        painpoints:
+          - Inflexible deal stages that don't align with your business processes
+          - Challenges in tracking and reporting deal progress
+          - Difficulty coordinating team efforts during the sales process
+
+      - category: Enhanced Communication
+        priority: 3
+        painpoints:
+          - Difficulty tracking conversations and correspondence with prospects
+          - Inefficient collaboration among team members
+          - Mismanagement of tasks leading to missed deadlines
+
+      - category: Intelligent Lead Capturing
+        priority: 4
+        painpoints:
+          - Ineffective lead engagement due to generic messaging
+          - Poor conversion rates from lack of personalisation
+          - Difficulty identifying high-quality leads and prioritising them
+
+      - category: Workflow Automation
+        priority: 5
+        painpoints:
+          - Time-consuming manual tasks reducing productivity
+          - Inconsistencies in following up with leads and prospects
+          - Inability to scale operations efficiently
+
+      - category: Integrated Solutions
+        priority: 6
+        painpoints:
+          - Difficulty managing multiple tools and platforms
+          - Loss of valuable insights due to disconnected data
+          - Increased complexity and inefficiency in business processes
+
+    pitch: >
+      <p>At AxOps&#8482;, we understand the unique challenges businesses face when managing their sales and marketing efforts. Our comprehensive services are designed to help you overcome these obstacles and achieve your desired outcomes by leveraging the full potential of HubSpot CRM.</p>
+      <p>Our team of experts focuses on addressing the key areas critical to your success, such as efficient data management, customised deal flows, and enhanced communication. We recognise that inaccurate and outdated contact data can hinder your campaigns, so we streamline your data management processes to ensure seamless execution and an improved user experience.</p>
+      <p>With our in-depth understanding of various industries, we tailor your sales processes to suit your specific needs. We help you customise deal stages and optimise communication within your team, ensuring that tasks are delegated effectively and deadlines are met. This approach enables your business to grow and thrive in a competitive landscape.</p>
+      <p>Intelligent lead capturing is crucial to driving prospects further down the sales funnel. Our services help you maximise lead engagement by implementing personalised messaging, forms, and chatbot conversations, addressing the pain points that may limit your conversion rates.</p>
+      <p>Workflow automation is another key area where we can assist you. Our team will help you automate sales and marketing workflows, allowing your business to work smarter, not harder. This not only saves you time and resources but also increases productivity and operational efficiency.</p>
+      <p>Lastly, we focus on integrating your existing tools and platforms with HubSpot CRM to streamline your workflow, optimise SEO, and make data-driven decisions for business growth. Our extensive experience in the industry ensures that we can provide you with the insights and strategies needed to overcome challenges and achieve your desired outcomes.</p>
+      <p>At AxOps&#8482;, we are committed to helping you maximise the ROI of your HubSpot CRM investment. Our services are designed to empower your growth and drive the results you need for success.</p>
+
   salesforce-development.md:
     title: Salesforce Development
     tagline: "Elevate Your Salesforce Journey: Bespoke Development Solutions"
