added workforce optimisation creatives in yaml

--- a/_data/pageconfig/navigation.yml
+++ b/_data/pageconfig/navigation.yml
@@ -107,7 +107,7 @@
         -
           name: Technical Recruitment
           url: /technical-recruitment
-          enabled: true
+          enabled: false
         -
           name: Workforce Optimisation
           url: /workforce-optimisation
