--- a/_data/pageconfig/solutions.yaml
+++ b/_data/pageconfig/solutions.yaml
@@ -1,4 +1,197 @@
 pages:
+  workforce-optimisation.md:
+    title: Workforce Optimisation
+    tagline: 'Maximise Productivity with AxOps&#8482; Workforce <span class="underline-3 style-2 yellow">TeamOps</span> Solutions'
+    outcome_image: /assets/img/icons/lineal/target.svg
+    obstacle_image: /assets/img/icons/lineal/puzzle.svg
+
+    desired_outcomes:
+      - category: Enhanced Efficiency
+        description: Streamline processes and reduce operational bottlenecks, enabling your workforce to achieve optimal productivity.
+
+      - category: Improved Communication
+        description: Facilitate seamless collaboration and information sharing, fostering a cohesive working environment.
+
+      - category: Cost Reduction
+        description: Data-driven strategies to optimise resource allocation, lowering costs without sacrificing performance.
+
+      - category: Skilled Workforce
+        description: Training and development programmes empowering employees to excel in their roles and contribute meaningfully.
+
+      - category: Informed Decision-Making
+        description: Leverage analytics and insights to make data-driven decisions, enhancing operational effectiveness and growth.
+
+      - category: Employee Satisfaction
+        description: Foster a positive work culture and environment, boosting morale, engagement, and employee retention.
+
+    common_obstacles:
+      - category: Inefficient Processes
+        description: Outdated and cumbersome workflows hamper productivity, leading to wasted time and resources.
+
+      - category: Inadequate Communication
+        description: Poor communication channels and information silos obstruct effective collaboration and hinder decision-making.
+
+      - category: High Operating Costs
+        description: Inefficient resource allocation and excessive spending result in ballooning expenses and reduced profitability.
+
+      - category: Skill Gaps
+        description: Lack of employee development and training programmes limits workforce potential and hampers business growth.
+
+      - category: Limited Data Analysis
+        description: Insufficient use of analytics and data-driven insights prevents informed decision-making and strategic planning.
+
+      - category: Low Employee Engagement
+        description: A negative workplace and lack of support lead to disengaged employees, increased turnover, and reduced efficiency.
+
+    outcomes_vs_painpoints:
+      - category: Enhanced Efficiency
+        priority: 1
+        painpoints:
+          - Time-consuming manual tasks
+          - Redundant processes and workflows
+          - Inadequate task delegation and prioritisation
+
+      - category: Improved Communication
+        priority: 2
+        painpoints:
+          - Inconsistent communication channels
+          - Misunderstandings due to unclear messages
+          - Difficulty tracking project updates and progress
+
+      - category: Cost Reduction
+        priority: 3
+        painpoints:
+          - Unnecessary expenses and resource waste
+          - Suboptimal workforce scheduling
+          - Inability to identify cost-saving opportunities
+
+      - category: Skilled Workforce
+        priority: 4
+        painpoints:
+          - Insufficient employee training and development
+          - Inadequate talent acquisition strategies
+          - Limited opportunities for employee growth
+
+      - category: Informed Decision-Making
+        priority: 5
+        painpoints:
+          - Lack of actionable insights from data
+          - Difficulty forecasting trends and demand
+          - Overreliance on intuition and gut feeling
+
+      - category: Employee Satisfaction
+        priority: 6
+        painpoints:
+          - Low employee morale and motivation
+          - Insufficient recognition and rewards
+          - High stress levels and burnout risk
+
+    pitch: >
+      <p>Our comprehensive workforce optimisation services are designed to help you overcome the challenges that hinder your organisation's growth and success. With extensive experience in the industry, we are committed to delivering exceptional results that cater to your specific needs.</p>
+      <p>Our top priority is to enhance efficiency within your organisation. By streamlining processes and reducing operational bottlenecks, we enable your workforce to achieve optimal productivity. We understand the pain points of time-consuming manual tasks, redundant workflows, and inadequate task delegation, and we are equipped to tackle these issues head-on.</p>
+      <p>Improving communication is vital for the success of any organisation. We facilitate seamless collaboration and information sharing, fostering a cohesive working environment that overcomes the obstacles of inconsistent communication channels, misunderstandings, and difficulty tracking project updates.</p>
+      <p>Cost reduction is another crucial aspect of our services. We implement data-driven strategies to optimise resource allocation, lowering expenses without sacrificing performance. Our approach identifies unnecessary expenses, suboptimal scheduling, and cost-saving opportunities to ensure the financial health of your organisation.</p>
+      <p>We are dedicated to cultivating a skilled workforce by providing targeted training and development programmes. Our solutions address insufficient employee development, inadequate talent acquisition strategies, and limited growth opportunities, empowering your employees to excel in their roles and contribute meaningfully.</p>
+      <p>Informed decision-making is essential in today's competitive business landscape. We leverage analytics and insights to help you make data-driven decisions, enhancing operational effectiveness and enabling growth. We address the challenges of lacking actionable insights, difficulty forecasting trends, and overreliance on intuition, allowing you to make strategic choices with confidence.</p>
+      <p>Finally, we believe in fostering employee satisfaction. By creating a positive work culture and environment, we boost morale, engagement, and employee retention. Our strategies address low employee motivation, insufficient recognition, and high stress levels, ensuring a thriving and successful workforce.</p>
+      <p>Partner with us to experience the difference that our workforce optimisation services can make in your organisation!</p>
+
+  technical-recruitment.md:
+    title: Technical Recruitment
+    tagline: "Elevating Talent, Empowering Success: AxOps&#8482; Technical Recruitment Solutions"
+    outcome_image: /assets/img/icons/lineal/target.svg
+    obstacle_image: /assets/img/icons/lineal/puzzle.svg
+
+    desired_outcomes:
+      - category: Expert Talent Acquisition
+        description: Securing top-tier professionals to elevate your business performance and drive innovation.
+
+      - category: Industry-Specific Expertise
+        description: Providing recruitment solutions tailored to your industry, ensuring the perfect match for your company's needs.
+
+      - category: Time-Efficient Recruitment
+        description: Streamlining the hiring process through targeted candidate sourcing, saving you time and effort.
+
+      - category: Cost-Effective Solutions
+        description: Delivering recruitment strategies that maximise your return on investment and optimise your hiring budget.
+
+      - category: Dedicated Client Support
+        description: Personalised assistance throughout the recruitment journey, ensuring a seamless and efficient experience.
+
+      - category: Compliance and Integrity
+        description: Upholding the highest ethical standards and regulatory requirements for a reliable recruitment process.
+
+    common_obstacles:
+      - category: Limited Candidate Pool
+        description: Difficulty finding qualified candidates, resulting in a longer and less efficient hiring process.
+
+      - category: Insufficient Industry Knowledge
+        description: Lack of familiarity with specific industry requirements, leading to mismatches in candidate skills and expertise.
+
+      - category: Ineffective Screening Methods
+        description: Inadequate candidate screening processes, potentially resulting in the selection of unsuitable candidates.
+
+      - category: Budget Constraints
+        description: Limited financial resources, impacting the ability to attract top talent and secure the best candidates.
+
+      - category: Time Management Issues
+        description: Insufficient time to invest in the process, causing delays and missed opportunities to secure ideal candidates.
+
+      - category: Compliance Challenges
+        description: Navigating complex regulations and legal requirements, leading to potential errors and reputational risks.
+
+    outcomes_vs_painpoints:
+      - category: Expert Talent Acquisition
+        priority: 1
+        painpoints:
+          - Difficulty attracting top-tier professionals
+          - Competition with other companies for sought-after talent
+          - Ensuring candidate fit within company culture and vision
+
+      - category: Industry-Specific Expertise
+        priority: 2
+        painpoints:
+          - Limited understanding of unique industry requirements
+          - Inability to identify transferable skills for niche roles
+          - Adapting to evolving sector-specific demands
+
+      - category: Time-Efficient Recruitment
+        priority: 3
+        painpoints:
+          - Lengthy and complex hiring processes
+          - Delays in filling critical positions
+          - Struggles to manage multiple vacancies simultaneously
+
+      - category: Cost-Effective Solutions
+        priority: 4
+        painpoints:
+          - Balancing budget limitations with recruitment needs
+          - Evaluating cost vs. quality of candidates
+          - Minimising costs associated with turnover and unfilled positions
+
+      - category: Dedicated Client Support
+        priority: 5
+        painpoints:
+          - Lack of personalised and consistent communication
+          - Limited assistance during the onboarding process
+          - Inadequate support in resolving recruitment-related challenges
+
+      - category: Compliance and Integrity
+        priority: 6
+        painpoints:
+          - Navigating complex regulatory requirements
+          - Ensuring adherence to industry standards and best practices
+          - Protecting sensitive candidate and company data
+
+    pitch: >
+      <p>At AxOps&#8482;, we understand the unique challenges businesses face when it comes to finding the right talent. Our goal is to provide comprehensive, industry-specific expertise that enables you to achieve the desired outcomes while overcoming the obstacles that stand in the way of successful recruitment.</p>
+      <p>Our team of experts is dedicated to helping you secure top-tier professionals who will drive innovation and elevate your business performance. We recognise the importance of having a deep understanding of your industry's requirements, which allows us to tailor our recruitment strategies to your company's specific needs. This ensures a seamless and efficient process that saves you time and effort.</p>
+      <p>Time is of the essence, and we are committed to streamlining the hiring process through targeted candidate sourcing. We also understand the need for cost-effective solutions that maximise your return on investment and optimise your hiring budget. Our team is adept at balancing budget limitations with recruitment needs, ensuring that you get the most value for your money.</p>
+      <p>At AxOps&#8482;, we pride ourselves on our ability to provide dedicated client support throughout the recruitment journey. Our personalised assistance ensures a seamless experience, from initial consultation to candidate onboarding. We also take compliance and integrity very seriously, upholding the highest ethical standards and adhering to all regulatory requirements for a reliable recruitment process.</p>
+      <p>With extensive experience in the industry, we have a proven track record of successfully navigating the obstacles that often come between customers and their desired outcomes. Whether it's overcoming limited candidate pools, insufficient industry knowledge, or ineffective screening methods, we are your trusted partner in achieving your recruitment goals.</p>
+      <p>Partner with AxOps&#8482; today and experience the difference that our industry expertise and commitment to excellence can make in your hiring process.</p>
+
+    
   project-management.md:
     title: Project Management
     tagline: "AxOps&#8482; Project Management Services: Streamlined Projects, Realised Visions &#127919;"
@@ -90,7 +283,7 @@ pages:
 
   hubspot-crm-optimisation.md:
     title: HubSpot CRM Optimisation
-    tagline: "Empower Your Growth: Unlock HubSpot's Full Potential & Drive Results!"
+    tagline: "Empower Your Growth: Unlock HubSpot's Full Potential & Drive Results"
     outcome_image: /assets/img/icons/lineal/target.svg
     obstacle_image: /assets/img/icons/lineal/puzzle.svg
 
