minor update to business analytics creatives

--- a/_data/pageconfig/solutions.yaml
+++ b/_data/pageconfig/solutions.yaml
@@ -1075,7 +1075,7 @@ pages:
         category: Performance Management
         description: >
           Improved tracking and monitoring of KPIs,
-          optimisation of business performance and profitability,
+          optimisation of performance and profitability,
           improved alignment of goals and objectives across the organisation.
 
       - 
