initialised creatives for technologies yaml

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@ _posts
 _drafts
 docs
 assets/img/photos/custom
+assets/img/illustrations/custom/original
 .jekyll-cache
 .jekyll-metadata
 .sass-cache
