--- a/_data/pageconfig/navigation.yml
+++ b/_data/pageconfig/navigation.yml
@@ -189,7 +189,7 @@
       children:
         -
           name: API Development
-          url: /api-development
+          url: "#api-development"
           enabled: true
         -
           name: SaaS Development
